# HwpForge

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MEMORY.md  Makefile  README.md  SECURITY.md  bacon.toml  book.toml  context7.json  deny.toml  dprint.json  release-plz.toml  rust-toolchain.toml  rustfmt.toml  server.json  smithery.yaml
.cargo/: config.toml
.config/: nextest.toml
.docs/planning/: ROADMAP.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  release-plz.yml  (+2 more)
benches/: README.md
branding/: BRANDING.md
crates/hwpforge/: CHANGELOG.md  Cargo.toml
crates/hwpforge-bindings-cli/: Cargo.toml
crates/hwpforge-bindings-cli/src/: error.rs  main.rs
crates/hwpforge-bindings-cli/src/analysis/: deep_counts.rs  hwpx_paths.rs  mod.rs
crates/hwpforge-bindings-cli/src/analysis/deep_counts/: table_properties.rs
crates/hwpforge-bindings-cli/src/commands/: audit_hwp5.rs  census_hwp5.rs  convert.rs  convert_hwp5.rs  from_json.rs  inspect.rs  mod.rs  patch.rs  schema.rs  templates.rs  to_json.rs  to_md.rs
crates/hwpforge-bindings-cli/tests/: cli_integration.rs
crates/hwpforge-bindings-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/hwpforge-bindings-mcp/src/: main.rs  output.rs  server.rs
crates/hwpforge-bindings-mcp/src/prompts/: convert_review.rs  mod.rs  proposal.rs  report.rs
crates/hwpforge-bindings-mcp/src/resources/: mod.rs
crates/hwpforge-bindings-mcp/src/tools/: convert.rs  from_json.rs  inspect.rs  mod.rs  patch.rs  restyle.rs  templates.rs  to_json.rs  to_md.rs  validate.rs
crates/hwpforge-bindings-py/: Cargo.toml
crates/hwpforge-blueprint/: CHANGELOG.md  Cargo.toml
crates/hwpforge-blueprint/src/: border_fill.rs  builtins.rs  error.rs  inheritance.rs  lib.rs  registry.rs  schema.rs  serde_helpers.rs  style.rs  template.rs
crates/hwpforge-blueprint/templates/: default.yaml  gov_proposal.yaml
crates/hwpforge-blueprint/tests/: integration.rs  proptest.rs
crates/hwpforge-core/: CHANGELOG.md  Cargo.toml
crates/hwpforge-core/src/: caption.rs  chart.rs  column.rs  control.rs  document.rs  error.rs  image.rs  lib.rs  metadata.rs  numbering.rs  page.rs  paragraph.rs  run.rs  section.rs  style_lookup.rs  tab.rs  table.rs  validate.rs
crates/hwpforge-core/tests/: integration.rs
crates/hwpforge-foundation/: CHANGELOG.md  Cargo.toml
crates/hwpforge-foundation/src/: color.rs  enums.rs  error.rs  ids.rs  index.rs  lib.rs  macros.rs  units.rs
crates/hwpforge-smithy-hwp5/: Cargo.toml
crates/hwpforge-smithy-hwp5/src/: error.rs  lib.rs  numeric.rs  projection.rs  semantic.rs  semantic_adapter.rs  style_store.rs  style_store_border_fill.rs  style_store_convert.rs  style_store_tests.rs  table_cell_vertical_align.rs  table_page_break.rs  test_support.rs
crates/hwpforge-smithy-hwp5/src/decoder/: header.rs  mod.rs  package.rs  section.rs
crates/hwpforge-smithy-hwp5/src/schema/: border_fill.rs  header.rs  mod.rs  record.rs  section.rs
crates/hwpforge-smithy-hwpx/: CHANGELOG.md  Cargo.toml
crates/hwpforge-smithy-hwpx/examples/: architecture_guide.rs  chart_styles.rs  checkable_list_semantics_visual.rs  equation_styles.rs  feature_isolation.rs  full_report.rs  hwpx_complete_guide.rs  hwpx_json_roundtrip.rs  large_table.rs  line_styles.rs  list_acceptance_visual.rs  list_shared_semantics_visual.rs  new_features_test.rs  page_layout.rs  paragraph_and_annotations.rs  positioning_and_toc.rs  review_api.rs  roundtrip_save.rs  shapes_and_references.rs  showcase.rs  style_infrastructure.rs  tab_edge_cases.rs  text_direction_and_dropcap.rs  wave14_test.rs  wave7_style_test.rs  wave8_10_13_test.rs  wave9_11_12_comprehensive.rs  wave9_page_layout_test.rs
crates/hwpforge-smithy-hwpx/examples/_support/: list_visual.rs
crates/hwpforge-smithy-hwpx/examples/feature_isolation_large/: mod.rs  shapes_advanced.rs
crates/hwpforge-smithy-hwpx/examples/hwpx_complete_guide_parts/: section1.rs  section3.rs
crates/hwpforge-smithy-hwpx/src/: color.rs  default_styles.rs  error.rs  exchange.rs  inline_text.rs  lib.rs  list_bridge.rs  patch.rs  presets.rs  registry_bridge.rs  section_workflow.rs  style_lookup_bridge.rs  style_store.rs
crates/hwpforge-smithy-hwpx/src/decoder/: chart.rs  header.rs  mod.rs  package.rs  section.rs  shapes.rs
crates/hwpforge-smithy-hwpx/src/encoder/: chart.rs  header.rs  header_tabs.rs  mod.rs  package.rs  section.rs  shapes.rs
crates/hwpforge-smithy-hwpx/src/encoder/section/: table.rs
crates/hwpforge-smithy-hwpx/src/schema/: header.rs  mod.rs  section.rs  shapes.rs
crates/hwpforge-smithy-hwpx/tests/: golden.rs  spike_serialize.rs
crates/hwpforge-smithy-hwpx/tests/fixtures/: charts.hwpx  equations.hwpx  line.hwpx
crates/hwpforge-smithy-md/: CHANGELOG.md  Cargo.toml
crates/hwpforge-smithy-md/examples/: gen_hwpx.rs  hwpx_md_convert.rs
crates/hwpforge-smithy-md/src/: decoder.rs  error.rs  frontmatter.rs  internal_styles.rs  lib.rs  mapper.rs
crates/hwpforge-smithy-md/src/decoder/: lossless.rs
crates/hwpforge-smithy-md/src/encoder/: list_format.rs  lossless.rs  lossy.rs  mod.rs  styled.rs
crates/hwpforge-smithy-md/src/eqn/: lexer.rs  mod.rs  parser.rs
crates/hwpforge-smithy-md/tests/: golden_roundtrip.rs  hwpx_to_md.rs  integration_pipeline.rs
crates/hwpforge-smithy-md/tests/fixtures/: full_elements.md  multi_section.md  simple_body.md
crates/hwpforge/src/: lib.rs
docs/: README.md  SUMMARY.md
examples/: 01_text.hwpx  02_rich_text.hwpx  03_table.hwpx  04_header_footer.hwpx  05_footnote_endnote.hwpx  06_textbox.hwpx  07_line.hwpx  08_ellipse.hwpx  09_polygon.hwpx  10_multi_column.hwpx  11_image.hwpx  12_hyperlink.hwpx  13_equation.hwpx  14_chart.hwpx  15_shapes_advanced.hwpx  README.md  full_report.hwpx  hwpx_complete_guide.hwpx
tests/: README.md
theme/: custom.css
(+239 files in other folders)
