[workspace]
members = [
    "crates/hwpforge-foundation",
    "crates/hwpforge-core",
    "crates/hwpforge-blueprint",
    "crates/hwpforge-smithy-hwpx",
    "crates/hwpforge-smithy-hwp5",
    "crates/hwpforge-smithy-md",
    "crates/hwpforge-bindings-py",
    "crates/hwpforge-bindings-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["AiScream Team <team@aiscream.dev>"]
repository = "https://github.com/aiscream/hwpforge"
homepage = "https://github.com/aiscream/hwpforge"
documentation = "https://docs.rs/hwpforge"
readme = "README.md"
keywords = ["hwp", "hwpx", "owpml", "document", "korean"]
categories = ["parser-implementations", "encoding", "text-processing"]

[workspace.dependencies]
# === XML Processing ===
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === YAML Processing ===
serde_yaml = "0.9"

# === ZIP Compression ===
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# === HWP5 Binary ===
cfb = "0.11"
flate2 = "1.0"
byteorder = "1.5"
encoding_rs = "0.8"

# === Markdown ===
pulldown-cmark = "0.12"

# === Error Handling ===
thiserror = "2.0"
anyhow = "1.0"

# === JSON Schema (for MCP) ===
schemars = { version = "0.8", features = ["preserve_order", "indexmap2"] }

# === Python Bindings ===
pyo3 = { version = "0.22", features = ["extension-module"] }

# === CLI ===
clap = { version = "4.5", features = ["derive", "env"] }

# === Logging ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === Ordered Maps ===
indexmap = { version = "2", features = ["serde"] }

# === Utilities ===
once_cell = "1.19"

# === Type System Enhancement ===
derive_more = { version = "1.0", features = ["full"] }
string_cache = "0.8"
smallvec = { version = "1.13", features = ["serde", "union"] }
strum = { version = "0.26", features = ["derive"] }

# === Testing (dev-dependencies) ===
proptest = "1.5"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
