[workspace]
members = [
  "crates/hwpforge-bindings-cli",
  "crates/hwpforge-bindings-py",
  "crates/hwpforge-blueprint",
  "crates/hwpforge-core",
  "crates/hwpforge-foundation",
  "crates/hwpforge-smithy-hwp5",
  "crates/hwpforge-smithy-hwpx",
  "crates/hwpforge-smithy-md",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["AiScream Team <team@aiscream.dev>"]
categories = ["parser-implementations", "encoding", "text-processing"]
documentation = "https://docs.rs/hwpforge"
edition = "2021"
homepage = "https://github.com/aiscream/hwpforge"
keywords = ["hwp", "hwpx", "owpml", "document", "korean"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aiscream/hwpforge"
rust-version = "1.75"

[workspace.dependencies]
# === XML Processing ===
quick-xml = { version = "0.36", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === YAML Processing ===
serde_yaml = "0.9"

# === ZIP Compression ===
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# === HWP5 Binary ===
byteorder = "1.5"
cfb = "0.11"
encoding_rs = "0.8"
flate2 = "1.0"

# === Markdown ===
pulldown-cmark = "0.12"

# === Error Handling ===
anyhow = "1.0"
thiserror = "2.0"

# === JSON Schema (for MCP) ===
schemars = { version = "0.8", features = ["preserve_order", "indexmap2"] }

# === Python Bindings ===
pyo3 = { version = "0.22", features = ["extension-module"] }

# === CLI ===
clap = { version = "4.5", features = ["derive", "env"] }

# === Logging ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === Ordered Maps ===
indexmap = { version = "2", features = ["serde"] }

# === Utilities ===
once_cell = "1.19"

# === Type System Enhancement ===
derive_more = { version = "1.0", features = ["full"] }
smallvec = { version = "1.13", features = ["serde", "union"] }
string_cache = "0.8"
strum = { version = "0.26", features = ["derive"] }

# === Testing (dev-dependencies) ===
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
