[package]
name = "hwpforge-bindings-mcp"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HwpForge MCP server — AI-first HWPX document tools"

[[bin]]
name = "hwpforge-mcp"
path = "src/main.rs"

[dependencies]
hwpforge-core = { path = "../hwpforge-core" }
hwpforge-smithy-hwpx = { path = "../hwpforge-smithy-hwpx" }
hwpforge-smithy-md = { path = "../hwpforge-smithy-md" }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
