[package]
name = "hwpforge-bindings-mcp"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Anvil — HwpForge MCP server for AI-native HWPX document tools"

[[bin]]
name = "hwpforge-mcp"
path = "src/main.rs"

[dependencies]
hwpforge-core = { path = "../hwpforge-core", version = "0.1.5" }
hwpforge-smithy-hwpx = { path = "../hwpforge-smithy-hwpx", version = "0.1.5" }
hwpforge-smithy-md = { path = "../hwpforge-smithy-md", version = "0.1.5" }
rmcp = { version = "1.1", features = ["server", "macros", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
