[package]
name = "hwpforge-blueprint"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "YAML-based style template system for HwpForge (Figma Design Token pattern)"

[dependencies]
hwpforge-core = { path = "../hwpforge-core" }
hwpforge-foundation = { path = "../hwpforge-foundation" }
indexmap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
