[package]
name = "hwpforge-core"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Format-independent Document Object Model for HwpForge"

[dependencies]
hwpforge-foundation = { path = "../hwpforge-foundation", version = "0.3.0" }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
