[package]
name = "hwpforge-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Foundation types for HwpForge (HwpUnit, Color, Interned IDs, Branded Index)"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Type system
derive_more = { workspace = true }
string_cache = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
# criterion deferred -- `half` crate requires rustc 1.81+, incompatible with MSRV 1.75
