[package]
name = "hwpforge-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Foundation types for HwpForge (HwpUnit, Color, Interned IDs, Branded Index)"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
schemars = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
# criterion deferred -- `half` crate requires rustc 1.81+, incompatible with MSRV 1.75
