[package]
name = "hwpforge-foundation"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Foundation types for HwpForge (HwpUnit, Color, Interned IDs, Branded Index)"

[dependencies]
# Serialization
schemars = { workspace = true }
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
# criterion deferred -- enable when benchmarks are needed
