[package]
name = "hwpforge-smithy-hwp5"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HWP5 binary format decoder for HwpForge (not yet implemented)"

[dependencies]
