[package]
name = "hwpforge-smithy-hwp5"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HWP5 binary format decoder for HwpForge (not yet implemented)"

[dependencies]
byteorder = { workspace = true }
cfb = { workspace = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true }
hwpforge-blueprint = { path = "../hwpforge-blueprint", version = "0.4.0" }
hwpforge-core = { path = "../hwpforge-core", version = "0.4.0" }
hwpforge-foundation = { path = "../hwpforge-foundation", version = "0.4.0" }
hwpforge-smithy-hwpx = { path = "../hwpforge-smithy-hwpx", version = "0.4.0" }
serde = { workspace = true }
thiserror = { workspace = true }
