[package]
name = "hwpforge-smithy-hwpx"
description = "HWPX format codec (encoder + decoder) for HwpForge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hwpforge-foundation = { path = "../hwpforge-foundation" }
hwpforge-core = { path = "../hwpforge-core" }
quick-xml = { workspace = true }
serde = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
