[package]
name = "hwpforge-smithy-hwpx"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HWPX format codec (encoder + decoder) for HwpForge"

[features]
## Enable `JsonSchema` derives on exchange types (`ExportedDocument`, `ExportedSection`).
schemars = ["dep:schemars"]

[dependencies]
hwpforge-blueprint = { path = "../hwpforge-blueprint", version = "0.1.7" }
hwpforge-core = { path = "../hwpforge-core", version = "0.1.7" }
hwpforge-foundation = { path = "../hwpforge-foundation", version = "0.1.5" }
quick-xml = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
