[package]
name = "hwpforge-smithy-md"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Markdown codec (decoder + lossy/lossless encoder) for HwpForge"

[dependencies]
hwpforge-blueprint = { path = "../hwpforge-blueprint", version = "0.1.6" }
hwpforge-core = { path = "../hwpforge-core", version = "0.1.5" }
hwpforge-foundation = { path = "../hwpforge-foundation", version = "0.1.5" }
pulldown-cmark = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hwpforge-smithy-hwpx = { path = "../hwpforge-smithy-hwpx", version = "0.1.6" }
pretty_assertions = { workspace = true }
zip = { workspace = true }
